updated language model and minor fix in grammar